--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.28-alpha'
     kapt 'com.google.dagger:hilt-android-compiler:2.28-alpha'
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
+    implementation 'androidx.hilt:hilt-work:1.0.0-alpha02'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
 
     // Room Database for Local Storage
@@ -84,5 +85,8 @@ dependencies {
 
     // Glide for images
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    //
+    implementation 'androidx.work:work-runtime-ktx:2.4.0'
 
 }
